--- a/app.json
+++ b/app.json
@@ -1,14 +1,5 @@
 {
-    "startup_app": {
-        "url": "http://localhost:5000/index.htm",
-        "name": "hm",
-        "uuid": "hm",
-        "autoShow": true
-    },
-    "runtime": {
-        "version": "6.49.20.22",
-        "forcelatest": true,
-        "arguments": ""
-    },
+    "startup_app": { "url": "http://localhost:5000/index.htm", "name": "hm", "uuid": "hm", "autoShow": true },
+    "runtime": { "version": "6.49.20.22", "forcelatest": true, "arguments": "" },
     "shortcut": {}
 }
